# surgical-preview-paper

./: Makefile  README.md  pyproject.toml  refs.bib
data/: canonical_rows.csv
docs/: novelty_notes.md  real_face_checklist.md  scripts.md
scripts/: aggregate.py  check_citations.py  config.py  figure_stems.py  make_figures.py  make_qualitative.py
sections/: 00_abstract.tex  01_intro.tex  02_related.tex  03_method.tex  05_setup.tex  06_results.tex  07_limitations.tex  08_ethics.tex  09_conclusion.tex
tables/: main_results.tex  numbers.tex  setup_models.tex
