[project]
name = "localize-dont-beautify-scripts"
version = "0.1.0"
description = "Analysis scripts that generate the paper's tables and figures from local run data"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0",
    "matplotlib>=3.11",
    "pillow>=12",
    "pyyaml>=6.0.3",
]

[tool.uv]
package = false
